force-app/main/default/objects/Trade__c/fields/Account_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Account_Abbreviation__c</fullName>
    <label>Account Abbreviation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>