force-app/main/default/objects/Trade__c/fields/Correspondent__c.field-meta.xml
<CustomField>
    <fullName>Correspondent__c</fullName>
    <label>Correspondent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Trades</relationshipLabel>
    <relationshipName>Trades</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>