force-app/main/default/objects/Trade__c/fields/Coupon_Floor__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Floor__c</fullName>
    <label>Coupon Floor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>