force-app/main/default/objects/Trade__c/fields/Cutoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Cutoff_Date__c</fullName>
    <label>Cutoff Date</label>
    <type>Date</type>
</CustomField>