force-app/main/default/objects/Trade__c/fields/Deals__c.field-meta.xml
<CustomField>
    <fullName>Deals__c</fullName>
    <label>Deals</label>
    <summaryForeignKey>Trade_Deal__c.Trade__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>