force-app/main/default/objects/Trade__c/fields/Interest_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Interest_Calculation__c</fullName>
    <label>Interest Calculation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>