force-app/main/default/objects/Trade__c/fields/Number_of_Exception__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Exception__c</fullName>
    <label># of Exception</label>
    <summaryFilterItems>
        <field>Trade_Deal__c.Exception__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Trade_Deal__c.Trade__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>