force-app/main/default/objects/Trade__c/fields/Price_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Price_Percentage__c</fullName>
    <label>Price Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>