force-app/main/default/objects/Trade__c/fields/Principal_Proceeds__c.field-meta.xml
<CustomField>
    <fullName>Principal_Proceeds__c</fullName>
    <label>Principal Proceeds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>