force-app/main/default/objects/Trade__c/fields/Proceed_to_Wire__c.field-meta.xml
<CustomField>
    <fullName>Proceed_to_Wire__c</fullName>
    <label>Proceed to Wire</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>