force-app/main/default/objects/Trade__c/fields/Total_Drawn__c.field-meta.xml
<CustomField>
    <fullName>Total_Drawn__c</fullName>
    <label>Total Drawn</label>
    <summarizedField>Trade_Deal__c.Total_Drawn__c</summarizedField>
    <summaryForeignKey>Trade_Deal__c.Trade__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>