force-app/main/default/objects/Trade__c/fields/Total_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Loan_Amount__c</fullName>
    <label>Total Loan Amount</label>
    <summarizedField>Trade_Deal__c.Total_Loan__c</summarizedField>
    <summaryForeignKey>Trade_Deal__c.Trade__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>