force-app/main/default/objects/Trade__c/fields/Total_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Purchase_Price__c</fullName>
    <label>Total Purchase Price</label>
    <summarizedField>Trade_Deal__c.Purchase_Price__c</summarizedField>
    <summaryForeignKey>Trade_Deal__c.Trade__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>